Added my footer and styling

--- a/src/Components/FirstFooter/FirstFooter.css
+++ b/src/Components/FirstFooter/FirstFooter.css
@@ -23,7 +23,7 @@
 }
 
 .footer1 {
-    border-bottom:  1px solid #ddd;
+    border-bottom:  1px solid #565656;
     padding-bottom:  4rem !important;
 }
 .para {
